# algo-zoo

./: .clippy.toml  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPER.md  LICENSE  README.md  RELEASE_COMMANDS.md  REPOSITORY_STATUS.md  rustfmt.toml
.github/workflows/: ci.yml  release.yml  rust.yml
benches/: sorting_benchmark.rs
docs/: PROJECT_STRUCTURE.md
docs/internal/: MEMORY_FIX_SUMMARY.md  PROGRESS_REPORT.md  VALIDATION_REPORT.md
specs/001-working-on-0/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: lib.rs  main.rs
src/lib/: bar_chart.rs  controller.rs  input.rs  interactive.rs  memory_graph.rs  mod.rs  progress.rs  sparkline.rs  visualization.rs
src/models/: algorithm.rs  config.rs  configuration.rs  display_mode.rs  interactive_mode.rs  markers.rs  memory_metrics.rs  metrics.rs  mod.rs  session.rs  traits.rs
src/services/: generator.rs  memory.rs  mod.rs  snapshot.rs
tests/: interactive_tests.rs  test_bar_chart.rs  test_edge_cases.rs  test_highlights.rs  test_memory_display.rs  test_quicksort_behavior.rs  test_quicksort_budget.rs  test_quicksort_incremental.rs  test_quicksort_properties.proptest-regressions  test_quicksort_properties.rs  test_shell_sort.rs  test_sparkline.rs  test_visualization.rs
tests/contract/: test_adaptive_fairness.rs  test_fairness_trait.rs  test_memory_tracker.rs  test_sorter_trait.rs  test_walltime_fairness.rs  test_weighted_fairness.rs
tests/integration/: test_cli_compatibility.rs  test_controls.rs  test_determinism.rs  test_fairness.rs  test_fairness_switching.rs  (+3 more)
(+45 files in other folders)
