[package]
name = "sorting-race"
version = "0.2.0"
edition = "2024"
authors = ["Algo Zoo Contributors"]
description = "Terminal-based sorting algorithm race visualization"
license = "MIT"
repository = "https://github.com/algo-zoo/sorting-race"

[dependencies]
ratatui = "0.29.0"
crossterm = "0.29.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.2"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
proptest = "1.0"
env_logger = "0.11"
criterion = "0.5"

[[bench]]
name = "sorting_benchmark"
harness = false
